--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
