--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-player": "^2.16.0",
+    "react-range-slider-input": "^3.2.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
